@startuml Diving Class Diagram

class Diver {
    #diverNumber : String
    #firstName : String
    #lastName : String
    #dateOfBirth : Date
    #email : String
    #password : String
    #diveLog : List<Dive>
    #ranks : Dictionary<string, Rank>

    +AddDiveToLog(dive : Dive)
    +AddRank(rank : Rank)
    +SignDive()
}

class Dive {
    -diveSite : DiveSite
    -divingClubName : string
    -date : Date
    -entryTime : Time
    -exitTime : Time
    -waterTemperature : Float
    -waterCondition : String
    -instructor : DivingInstructor
    -ParticipantsAndEquipment : Dictionary<string, List<EquipmentItem>>
    -clubSignature : Signature
    +signatures : List<Signature>
    +addParticipant(diver : Diver)
    +addSignature(signature : Signature)
}

class DiveSite {
    -code : int
    -description : String
    -perimeter : Float
    -depth : Float
    -waterType : String
}

class DivingInstructor extends Diver {
    -age : int
    -employmentRecords : List<EmploymentRecord>
    +AddEmployments(DivingClub: club, DateTime :startDate, DateTime: endDate)
}

class EmploymentRecord {
    -club : string
    -startDate : Date
    -endDate : Date
}

class DivingClub {
    -name : String
    -licenseNumber : String
    -contactPerson : String
    -address : String
    -country : Country
    -phone : String
    -email : String
    -website : String
    -divingInstructors : List<DivingInstructor>
    -diveSite : List<DiveSite>
    -diveLog : List<Dive>
    +AddDive(dive : Dive)
    +AddDivingInstructors(DivingInstructor: instructor)
    +AddDiveSites(DiveSite diveSite)
}

class Country {
    -name : String
    -divingRegulation : String
}

class EquipmentItem {
    -name : String
    -quantity : Integer
    -note : String

}
class Signature {
    -signer : String
    -timestamp : DateTime
}

class Rank {
    -description : int
    -divingClub : string
    -dateReceived : Date
    -certificateImage : File
}


DivingClub *-- Country
DivingClub *-- DivingInstructor
DivingClub *-- DiveSite
DivingClub *-- Dive

Dive *-- DiveSite
Dive *-- DivingInstructor
Dive *-- EquipmentItem
Dive *-- Signature

Diver *-- Dive
Diver *-- Rank

DivingInstructor *-- EmploymentRecord


' Dive *-- DiveSite
' Dive *- Diver
' Dive *- DivingInstructor
' Dive *- Signature

' DivingInstructor *-- EmploymentRecord

' EmploymentRecord *-- DivingClub

' Rank *- DivingClub

' Diver *- DiveLog
' Diver *- EquipmentItem
' Diver *- Rank

' DiveLog *-- Dive

' DivingClub *-- Country
' DivingClub *-- DivingInstructor
' DivingClub *- DiveSite


@enduml